Removed plans to support polygon and fixed a Title bug on mobile

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -27,6 +27,7 @@ a:hover {
   margin-bottom: 4.5rem;
   font-size: $big-font-size;
   font-weight: bold;
+  color: white;
   text-transform: uppercase;
 
   @include respond(phone) {
