--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -5,7 +5,7 @@
     #36D3EF 0%,
     #01014F 100%
   );
-  color: $white-color;
+  color: white;
   height: 100%;
   top: -5rem;
   border-top: 0px;
