--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -8,7 +8,7 @@
   padding: 25rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -10px;
-  color:   #01014F;
+  color:   white;
 
   @include respond(tab-land) {
     padding: 10rem 0;
