--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,8 @@
 #hero {
   min-height: 100vh;
   height: 100vh;
+  width: 100vw;
+  max-width: 100vw;
   display: flex;
   align-items: center;
   border-bottom: 0px;
@@ -39,11 +41,11 @@
       text-align: center;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
+      font-size: 2rem;
       line-height: 1.5;
     }
     @include respond(phone-xs) {
-      font-size: 2.8rem;
+      font-size: 2rem;
     }
   }
 
